--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,22 @@
-export DJANGO_SECRET_KEY=qwerty123456
-export DJANGO_DEBUG=0
-export DATABASE_NAME=database_name
+# Application
+# ====================================================================
+export DJANGO_DEBUG=1
+export DJANGO_SECRET_KEY=qwerty
+export COLLECT_STATIC=1
+
+# Database
+# ====================================================================
+export DATABASE_NAME=food
 export DATABASE_USER=django
 export DATABASE_PASSWORD=password
 export DATABASE_HOST=127.0.0.1
+
+# Cache
+# ====================================================================
 export REDIS_CACHE_URL=redis://127.0.0.1:6379
+
+# Email
+# ====================================================================
 export EMAIL_HOST_USER=example@yandex.ru
 export DEFAULT_FROM_EMAIL=example@yandex.ru
 export EMAIL_HOST_PASSWORD=********
-export COLLECT_STATIC=1
